# cbz-converter

./: Cargo.toml
src/: app.rs  comicinfo_import.rs  config.rs  converter.rs  main.rs  metadata.rs  models.rs  parser.rs
src/ui/: drop_zone.rs  entry_list.rs  mod.rs  toolbar.rs
