[package]
name = "cbz-converter"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe  = { version = "0", features = ["persistence"] }
egui    = "0"
zip     = { version = "8", default-features = false, features = ["deflate"] }
walkdir = "2"
serde   = { version = "1", features = ["derive"] }
natord  = "1"
rfd     = "0"
serde_json = "1"
roxmltree = "0"
